export enum TileType {
    patternedBlack,
    plainRed,
    patternedYellow,
    plainBlue,
    patternedBlue,
    firstMove
}
